Fixed alignment issue of the anchor icon.

--- a/src/styles/editor/editor-content.scss
+++ b/src/styles/editor/editor-content.scss
@@ -155,7 +155,7 @@
     svg {
       position: absolute;
       left: -25px;
-      bottom: 10px;
+      height: 100%;
       visibility: hidden;
       opacity: 0;
       transition: opacity 150ms ease-in;
